--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "baas_project",
   "version": "1.0.0",
-  "description": "[Modern Business](http://startbootstrap.com/template-overviews/modern-business/) is a multipurpose, full website template for [Bootstrap](http://getbootstrap.com/) created by [Start Bootstrap](http://startbootstrap.com/). This template includes 17 unique ejs pages and a working PHP register form.",
+  "description": "[Modern Business](http://startbootstrap.com/template-overviews/modern-business/) is a multipurpose, full website template for [Bootstrap](http://getbootstrap.com/) created by [BASS Project](http://startbootstrap.com/). This template includes 17 unique ejs pages and a working PHP register form.",
   "main": "app.js",
   "dependencies": {
     "cookie-parser": "^1.4.4",
