--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.17.1",
     "morgan": "^1.9.1",
     "multiparty": "^4.2.1",
+    "node-mysql": "^0.4.2",
     "request": "^2.88.0"
   },
   "devDependencies": {},
