--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "[Modern Business](http://startbootstrap.com/template-overviews/modern-business/) is a multipurpose, full website template for [Bootstrap](http://getbootstrap.com/) created by [BASS Project](http://startbootstrap.com/). This template includes 17 unique ejs pages and a working PHP register form.",
   "main": "app.js",
   "dependencies": {
+    "@herajs/client": "^0.16.2",
     "alert-node": "^2.0.3",
     "bcrypt": "^3.0.6",
     "cookie-parser": "^1.4.4",
