--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@herajs/client": "^0.16.2",
     "alert-node": "^2.0.3",
-    "bcrypt": "^3.0.6",
+    //"bcrypt": "^3.0.6",
     "cookie-parser": "^1.4.4",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
@@ -17,7 +17,9 @@
     "multiparty": "^4.2.1",
     "mysql": "^2.17.1",
     "node-mysql": "^0.4.2",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "ts-node": "^8.5.2",
+    "typescript": "^3.7.2"
   },
   "devDependencies": {},
   "scripts": {
