--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@herajs/client": "^0.16.2",
     "alert-node": "^2.0.3",
-    //"bcrypt": "^3.0.6",
+    "bcrypt": "^3.0.6",
     "cookie-parser": "^1.4.4",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
